# wireguard-android

./: .gitignore  .gitmodules  .tool-versions  CLAUDE.md  IMPLEMENTATION_DNS_RERESOLVE.md  INSTALL_AND_TEST.md  MAVEN_CENTRAL_MIGRATION.md  PHASE1_DIAGNOSTICS.md  README.md  build.gradle  build.gradle.kts  build.sh  build_tunnel.sh  gradle.properties  logging_analysis.md  nonnull.gradle  package-lock.json  package.json  settings.gradle  settings.gradle.kts  switch-env.sh  sync-crowdin.sh  version.gradle  wg-diag.sh
.github/workflows/: android.yml  build.yml  build.yml.save  main.yml
app/: build.gradle  nonnull.gradle  proguard-rules.pro
app/sampledata/: interface_names.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: fab_label_background.xml  ic_action_add.xml  ic_action_add_inverse.xml  ic_action_add_white.xml  ic_action_delete.xml  ic_action_delete_black.xml  ic_action_edit.xml  ic_action_edit_inverse.xml  ic_action_edit_white.xml  ic_action_open.xml  ic_action_open_inverse.xml  ic_action_open_white.xml  ic_action_save.xml  ic_action_scan_qr_code_white.xml  ic_action_select_all.xml  ic_open.xml  ic_settings.xml  ic_tile.xml  ic_tile_disabled.xml  list_item_background.xml  list_item_background_anim.xml
app/src/main/res/layout/: add_tunnels_bottom_sheet.xml  app_list_dialog_fragment.xml  app_list_item.xml  config_detail_fragment.xml  config_detail_peer.xml  config_edit_fragment.xml  config_edit_peer.xml  config_editor_fragment.xml  config_list_fragment.xml  config_list_item.xml  config_naming_dialog_fragment.xml  main_activity.xml  not_supported_activity.xml  placeholder_fragment.xml  profile_activity.xml  profile_detail_activity.xml  profile_detail_fragment.xml  profile_edit_activity.xml  profile_edit_fragment.xml  profile_list_activity.xml  profile_list_fragment.xml  profile_list_item.xml  tunnel_detail_fragment.xml  tunnel_detail_peer.xml  tunnel_editor_fragment.xml  tunnel_editor_peer.xml  tunnel_list_fragment.xml  tunnel_list_item.xml
app/src/main/res/layout-land/: config_activity.xml  profile_activity.xml  profile_list_activity.xml
app/src/main/res/layout-sw600dp/: main_activity.xml
app/src/main/res/layout-w720dp/: config_activity.xml
app/src/main/res/menu/: config_editor.xml  config_list.xml  config_list_delete.xml  main.xml  main_activity.xml  profile_detail.xml  profile_detail_edit.xml  profile_list.xml  tunnel_detail.xml  tunnel_list_action_mode.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  fab.xml  ic_launcher_background.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ldrtl/: fab.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-night-v27/: styles.xml
app/src/main/res/values-ru/: string.xml  strings.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/values-v27/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: preferences.xml
app/tools/: CMakeLists.txt  wg-quick.c
app/tools/libwg-go/: .gitignore  Makefile  api-android.go  go.mod  go.sum  goruntime-boottime-over-monotonic.diff  goruntime-fstatat-over-lstat.diff  jni.c
app/tools/libwg-go/src/: api-android.go  jni.c  queueconstants.go
app/tools/libwg-go/src/git.zx2c4.com/wireguard-go/: api-android.go  jni.c
app/tools/libwg-go/src/git.zx2c4.com/wireguard-go/tun/: api-android.go
app/tools/libwg-go/src/tun/: api-android.go
app/tools/ndk-compat/: compat.c  compat.h
b/: .gitignore  .gitmodules
b/.github/workflows/: build.yml
cli/: make-me-an-android-wg-command.sh  wg-quick.bash
config/: build.gradle
config/src/main/: AndroidManifest.xml
environments/: current_environment
environments/beta/: AndroidManifest.xml
environments/dc/: AndroidManifest.xml  Config.kt  msal_config.json
environments/local/: AndroidManifest.xml  Config.kt
environments/production/: AndroidManifest.xml  Config.kt  msal_config.json
environments/staging/: AndroidManifest.xml  msal_config.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tunnel/: build.gradle  build.gradle.kts  lint-baseline.xml  publish.gradle
tunnel/src/main/: AndroidManifest.xml
tunnel/src/test/resources/: broken.conf  invalid-key.conf  invalid-number.conf  invalid-value.conf  missing-attribute.conf  missing-section.conf  syntax-error.conf  unknown-attribute.conf  unknown-section.conf  working.conf  working_multiple_peers.conf
tunnel/tools/: CMakeLists.txt
tunnel/tools/hezwin-tools/src/: Makefile  ipc-linux.h  ipc-openbsd.h  ipc-windows.h  setconf.c
tunnel/tools/hezwin-tools/src/uapi/linux/linux/: wireguard.h
tunnel/tools/hezwin-tools/src/wg-quick/: android.c  darwin.bash  freebsd.bash  linux.bash  openbsd.bash
tunnel/tools/libwg-go/: Makefile  api-android.go  go.mod  go.sum  goruntime-boottime-over-monotonic.diff  jni.c
tunnel/tools/ndk-compat/: compat.c  compat.h
ui/: build.gradle  build.gradle.kts  lint-baseline.xml  proguard-android-optimize.txt  proguard-rules.pro
ui/sampledata/: interface_names.json
ui/src/debug/res/values/: strings.xml
ui/src/googleplay/: AndroidManifest.xml
ui/src/main/: AndroidManifest.xml
ui/src/main/assets/: myvpn.conf
ui/src/main/res/anim/: scale_down.xml  scale_up.xml
ui/src/main/res/color/: tv_list_item_tint.xml
ui/src/main/res/drawable/: add_tile.xml  avd_star_to_border.xml  avd_star_to_full.xml  border_around_edit.xml  button_background.xml  button_border.xml  ic_action_add_white.xml  ic_action_delete.xml  ic_action_edit.xml  ic_action_edit_white.xml  ic_action_generate.xml  ic_action_open.xml  ic_action_open_white.xml  ic_action_save.xml  ic_action_scan_qr_code.xml  ic_action_scan_qr_code_white.xml  ic_action_select_all.xml  ic_action_share_white.xml  ic_action_shortcut.xml  ic_action_sign_in.xml  ic_arrow_back.xml  ic_baseline_arrow_circle_down_24.xml  ic_baseline_arrow_circle_up_24.xml  ic_baseline_star.xml  ic_baseline_star_border.xml  ic_email_login.xml  ic_google_login.xml  info.xml  (+11 more)
(+658 files in other folders)
